Fix gradle build lol

--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ repositories {
     maven {
         // For fernflower
         name = 'sponge'
-        url = 'http://repo.spongepowered.org/maven'
+        url = 'https://repo.spongepowered.org/maven'
     }
     maven {
         // For modlauncher
